[gd_scene load_steps=7 format=3 uid="uid://c5ynpo7p54mt"]

[ext_resource type="Script" uid="uid://0pgm7gmy13ri" path="res://Scripts/HealthBar.gd" id="1_7m4pk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_dwfp7"]

[sub_resource type="LabelSettings" id="LabelSettings_8ldhe"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_n0byq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_6mxjh"]

[sub_resource type="CanvasTexture" id="CanvasTexture_s8683"]

[node name="HealthBar" type="TextureProgressBar" node_paths=PackedStringArray("health_label", "shield_bar", "under_healthbar")]
custom_minimum_size = Vector2(50, 10)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
value = 50.0
rounded = true
nine_patch_stretch = true
texture_progress = SubResource("CanvasTexture_dwfp7")
tint_progress = Color(0.0431373, 0.733333, 0.054902, 1)
script = ExtResource("1_7m4pk")
health_label = NodePath("HealthLabel")
shield_bar = NodePath("ShieldProgressBar")
under_healthbar = NodePath("UnderHealthBar")

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Health"
label_settings = SubResource("LabelSettings_8ldhe")
horizontal_alignment = 1

[node name="ShieldProgressBar" type="TextureProgressBar" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 110.0
value = 90.0
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_n0byq")
texture_progress = SubResource("CanvasTexture_6mxjh")
tint_under = Color(0.230315, 0.230315, 0.230315, 1)
tint_progress = Color(0.145098, 0.670588, 1, 1)

[node name="UnderHealthBar" type="TextureProgressBar" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 110.0
value = 80.0
nine_patch_stretch = true
texture_progress = SubResource("CanvasTexture_s8683")
tint_progress = Color(1, 0.413398, 0.432969, 1)
